CWPT-364: Removing unsed classes in markup for features and quicklinks as well as adding margin-spacing to resolve responsivness issues

--- a/src/scss/components/_pages.scss
+++ b/src/scss/components/_pages.scss
@@ -16,13 +16,17 @@
     }
 }
 
-
 .jumbotron {
     margin-top: -20px;
 }
 
-
 // IFramePage
 .Iframepage-iframe {
     border: 0;
+}
+
+// Features & Quicklinks
+.showcase-quicklinks,
+.showcase-feature {
+  margin-bottom: $line-height-computed * 1.5;
 }
